# little-startup

./: .env  .gitignore  .gitmodules  README.md  docker-compose.yml  docker-compose.yml.sample  init.sh  initialize.sh  nvim-dev.sh  nvim-start  nvim-start.sh  ops.sh  package-lock.json  prod.sh  start-nvim-container-little-example.sh  test.sh  v2-ops.sh
.devcontainer/: Dockerfile  post-create.sh
.devcontainer/backend/: .env.default  .env.example  .zshrc  devcontainer.json  post-create.sh
.devcontainer/example/: .zshrc  devcontainer.json  post-create.sh
.devcontainer/frontend/: .zshrc  devcontainer.json  post-create.sh
.devcontainer/frontend-tung/: devcontainer.json  post-create.sh
.devcontainer/little-example/: .zshrc  devcontainer.json  post-create.sh
.github/workflows/: test.yml
.idx/: dev.nix
backend/: .env.default  .env.example  .gitignore  Dockerfile  pom.xml
example/: .gitignore  Dockerfile  main.py  package-lock.json  pyproject.toml
example/python/: main.py  pyproject.toml
example/python/interview/: __init__.py  larion_wq.py
example/python/leetcode/: __init__.py  merge_two_lists.py
example/python/sudoku/: __init__.py
example/python/tests/: interview_test.py  leetcode_test.py  sudoku_test.py  test_util.py
example/python/utils/: benchmark_util.py  log_config.json  log_json_formatter.py  log_util.py
example/react/: Dockerfile  package.json
frontend/: .gitignore  Dockerfile
frontend-tung/: Dockerfile
frontend/app/: layout.tsx  page.tsx
little-example/: Dockerfile  pyproject.toml
myapp/: Dockerfile  pom.xml
(+84 files in other folders)
