[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "json5>=0.12.0",
    "logging>=0.4.9.6",
    "nbconvert>=7.16.6",
    "pip>=25.0.1",
    "pylance>=0.25.2",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
